<resources>
    <string name="app_name">Login &amp; Signup</string>
    <string name="sign_in">Sign-In</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="login">Login</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="repeat_password">Repeat-password</string>
    <string name="google">Google</string>
    <string name="default_web_client_id">18334617364-su373ik90lu5a5crcnhqg1373p3jbsnk.apps.googleusercontent.com</string>
    <string name="sign_out">Sign-Out</string>
    <string name="add_notes">Add Notes</string>
    <string name="open_all_notes">Open All Notes</string>
    <string name="add_note">Add Note</string>
    <string name="enter_your_description">Enter Your Description</string>
    <string name="enter_your_title">Enter Your Title</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
</resources>