<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Home_Screen">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signout"
        android:layout_width="159dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/login_btn_bg"
        android:fontFamily="@font/kurale"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:background="@drawable/signup_btn_bg"
        android:fontFamily="@font/kurale"
        android:padding="10dp"
        android:text="@string/add_notes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_open_notes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_open_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_btn_bg"
        android:fontFamily="@font/kurale"
        android:padding="10dp"
        android:text="@string/open_all_notes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_add_notes"
        app:layout_constraintTop_toTopOf="@+id/btn_add_notes" />
</androidx.constraintlayout.widget.ConstraintLayout>